hphp/hack/test/typecheck/pending_if10.php.exp
File "pending_if10.php", line 7, characters 10-11:
Undefined variable: $x (Naming[2050])
