hphp/hack/test/typecheck/pending_if10.php
<?hh // strict

function test(): void {
  if (true) {
    if (false) {
    }
    echo $x;
    $x = 1;
  } else {
    $x = 2;
  }
}
